# Scheduling-Algorithms

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: constants_storage.h  main.cpp
src/Application/: Application.cpp  Application.h
src/Scheduler/: Scheduler.cpp  Scheduler.h  SchedulerFactory.h
src/Scheduler/Lab_1/: SchedulerFCFS.cpp  SchedulerFCFS.h
src/Scheduler/Lab_2/: SchedulerRR.cpp  SchedulerRR.h  SchedulerSJF.cpp  SchedulerSJF.h
src/Scheduler/Lab_3/: SchedulerPSJF.cpp  SchedulerPSJF.h  SchedulerRR_SJF.cpp  SchedulerRR_SJF.h
src/Window/: Window.cpp  Window.h
tests/: scheduler_tests.cpp
tests/Scheduler/Lab_1/: FCFS_tests.cpp
tests/Scheduler/Lab_2/: RR_tests.cpp  SJF_tests.cpp
tests/Scheduler/Lab_3/: PSJF_tests.cpp  RR_SJF_tests.cpp
